# asyncio-rpc

./: .dockerignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  requirements_base.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  release.yml  test.yml
asyncio_rpc/: __init__.py  client.py  exceptions.py  models.py  pubsub.py  server.py
asyncio_rpc/commlayers/: base.py  redis.py
asyncio_rpc/serialization/: base.py  msgpack.py  shapely_models.py
docs/: conf.py  index.rst  installation.rst
examples/basic/: README.rst  client.py  server.py
examples/dataclass/: README.rst  client.py  models.py  server.py
examples/decorators/: README.rst  client.py  server.py
examples/stacked/: README.rst  client.py  server.py
tests/: conftest.py  test_msgpack_serialization.py  test_pubsub.py  test_rpc_client.py  test_rpc_server.py  test_shapely_serialization.py  test_simple_rpc_calls.py  utils.py
